--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,10 @@
     </parent>
 	
     <groupId>pl.ukomp</groupId>
-    <artifactId>rekrut</artifactId>
+    <artifactId>Rekrut</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>rekrut</name>
-    <description>Demo project for Spring Boot</description>
+    <name>Rekrut</name>
+    <description>Demo project for REST API service</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -94,23 +94,13 @@
             <scope>compile</scope>
         </dependency>        
         
+       <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+        </dependency>
+        
     </dependencies>
 
-    <profiles>
-        <profile>
-            <id>java11</id>
-            <activation>
-                <jdk>[11,)</jdk>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>org.glassfish.jaxb</groupId>
-                    <artifactId>jaxb-runtime</artifactId>
-                </dependency>
-            </dependencies>
-        </profile>
-    </profiles>
-        
     <build>
         <plugins>
             
