--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <artifactId>Rekrut</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Rekrut</name>
-    <description>Demo project for REST API service</description>
+    <description>Demo project for REST API service (with Spring Boot)</description>
 
     <properties>
         <java.version>1.8</java.version>
